<resources>
    <string name="app_name">SS Chat </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_chat">Chat</string>
    <string name="fragment_contact">Contacts</string>
    <string name="fragment_vault">Vault</string>
    <string name="fragment_setting">@string/action_settings</string>
    <string name="title_activity_chat_window">ChatWindowActivity</string>
    <string name="title_activity_group_chat_window">GroupChatWindowActivity</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="encrypted_text">Encrypted Text</string>
    <string name="encrypted_photo">Encrypted Photo</string>
    <string name="encrypted_note">Encrypted Note</string>
    <string name="encrypted_contact">Encrypted Contact</string>
    <string name="encrypted_video">Encrypted Video</string>
    <string name="encrypted_audio">Encrypted Audio</string>
    <string name="permission_rationale_message">You have rejected us to apply for authorization, please agree to authorization, otherwise the function can\'t be used normally!</string>
    <string name="permission_denied_forever_message">We need some of the permissions you rejected or the system failed to apply failed, please manually set to the page authorize, otherwise the function can\'t be used normally!</string>
    <string name="camera_and_location_rationale">These permission is required to share images.</string>
    <string name="title_message_notification">New Notification(s)</string>
    <string name="title_activity_photo_view">Picture</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>
    <string name="uploading">Uploaded [[UPLOADED_FILES]] of [[TOTAL_FILES]] at [[UPLOAD_RATE]] - [[PROGRESS]]</string>
    <string name="upload_success">Upload completed successfully in [[ELAPSED_TIME]]</string>
    <string name="upload_error">Error while uploading</string>
    <string name="upload_cancelled">Upload has been cancelled</string>
    <string name="cancel_upload">Cancel</string>
    <string name="you_cant_send_messages_group">You can’t send messages to this group because you’re no longer a member of the group.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="ecc_id">ECC ID</string>
    <string name="group_name">Group Name</string>
    <string name="delete">Delete</string>
    <string name="voice_call">Voice Call</string>
    <string name="change_name">Change Name</string>
    <string name="change_contact_name">Change Contact Name</string>
    <string name="send_message">Send Message</string>
    <string name="_00_00">00:00</string>
    <string name="slide_to_cancel">Slide to cancel</string>
    <string name="group_name_colon">Group Name :</string>
    <string name="create_group">Create Group</string>
    <string name="title">Title:</string>
    <string name="body">Body:</string>
    <string name="title_simple">Title</string>
    <string name="body_simple">Body</string>
    <string name="leave_group">Leave Group</string>
    <string name="cancel">@string/cancel_upload</string>
    <string name="add_contact">Add Contact</string>
    <string name="ecc_id_colon">ECC ID :</string>
    <string name="alias_colon">Alias :</string>
    <string name="save">Save</string>
    <string name="pictures">Pictures</string>
    <string name="camera">Camera</string>
    <string name="contacts">Contacts</string>
    <string name="notes">Notes</string>
    <string name="change_group_name">Change Group Name</string>
    <string name="update">Update</string>
    <string name="screen_name_colon">Screen Name :</string>
    <string name="contact_name_colon">Contact Name :</string>
    <string name="name_colon">Name :</string>
    <string name="destruct_time">Destruct time</string>
    <string name="you_are_on_the_last_attemp_if_incorrect_your_data_will_be_security_wiped">
        You are on the last attempt. If incorrect, your data will be wiped.In order to proceed you must type in the following text:
    </string>
    <string name="ShadowSecureTypeIn">Shadow_Secure</string>
    <string name="ShadowSecureWipeData">Shadow_Wipe</string>
    <string name="wipe_comment">
        Performing this action will completely wipe the application data of your secure chat app. If you want to proceed, please type the following text.
    </string>
    <string name="wipe_edit_hint">This Operation Can Not Be Undone</string>
    <string name="wipe_contacts">Clear contact list</string>
    <string name="wipe_completed">Data Wipe Complete</string>
    <string name="wipe_not_completed">Data Wipe Failed</string>
    <string name="ok">OK</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="signin">SIGN IN</string>
    <string name="next">NEXT</string>
    <string name="message">Message</string>
    <string name="discard">Discard</string>
    <string name="delete_all">Delete All</string>
    <string name="loading">Generating Secure Environment</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="license_key">LICENSE KEY</string>
    <string name="activate">ACTIVATE</string>
    <string name="chat">CHAT</string>
    <string name="password">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;PASSWORD</string>
    <string name="set_screen_name_and_password">Set Screen Name and Password</string>
    <string name="screen_name">SCREEN NAME</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="max_password_attempts">Max password attempts:</string>
    <string name="select_ringtone">Select Ringtone:</string>
    <string name="select_notify_sound">Select Notifications Sound:</string>
    <string name="ringtone">Ringtone</string>
    <string name="notify">Notifications</string>
    <string name="default_word">English</string>
    <string name="font_size_colon">Font Size:</string>
    <string name="medium">Medium</string>
    <string name="account_settings">APP SETTINGS</string>
    <string name="lock_time_colon">Lock Time:</string>
    <string name="immediately">Immediately</string>
    <string name="account_password_colon">Account Password:</string>
    <string name="phone_password">Change Phone Password:</string>
    <string name="star_series">********</string>
    <string name="app_version">Application Version</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_key_to_send_message_colon">Enter Key To Send Message:</string>
    <string name="duress_password_colon">Duress Password:</string>
    <string name="duress_password">Duress Password</string>
    <string name="ecc_public_key_colon">Ecc Public Key:</string>
    <string name="ecc_public_keys">ECC Public Keys</string>
    <string name="chats">Chats</string>
    <string name="username">UserName</string>
    <string name="audio">Audio</string>
    <string name="_3_hours">3 hours</string>
    <string name="_10_22_pm">10:22 PM</string>
    <string name="contact_single">Contact</string>
    <string name="image">Image</string>
    <string name="personal_note">Personal Note</string>
    <string name="video">Video</string>
    <string name="admin">ADMIN</string>
    <string name="rename">Rename</string>
    <string name="vault">Vault</string>
    <string name="settings">@string/action_settings</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="secure_data_wipe">Secure Data Wipe</string>
    <string name="data_wipe">Data Wipe</string>
    <string name="lock">Lock</string>
    <string name="search">Search</string>
    <string name="new_message">New Message</string>
    <string name="destruct_timer">Destruct timer</string>
    <string name="mute_notification">Mute Notification</string>
    <string name="group_information">Group Information</string>
    <string name="share_from_vault">Share From Vault</string>
    <string name="personal_notes">Personal Notes</string>
    <string name="chat_messages">Chat Messages</string>
    <string name="save_to_vault">Save to Vault</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="add_member">Add Member</string>
    <string name="edit_group_name">Edit Group Name</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="password_field_is_required">Password field is required.</string>
    <string name="confirm_password_field_is_required">Confirm Password field is required.</string>
    <string name="password_must_contain_at_least_one_digit_one_lowercase_one_uppercase_one_special_character">Password must contain at least one digit,one lowercase,one uppercase,one special Character</string>
    <string name="required">Required</string>
    <string name="incorrect_current_password_please_try_again">Incorrect Current password. Please try again.</string>
    <string name="new_password_should_be_different_from_old_password">New Password should be different from Old Password.</string>
    <string name="duress_password_should_be_different_from_application_password">Duress password should be different from Application password</string>
    <string name="application_password_should_be_different_from_duress_password">Application password should be different from Duress password</string>
    <string name="app_unlock_password_field_is_required">App Unlock Password field is required.</string>
    <string name="you_are_on_your_last_attempt_if_incorrect_your_data_will_be_security_wiped">You are on your last attempt. If incorrect, your data will be security wiped with no possibility to recover.In order to proceed you have to type in the following text:</string>
    <string name="password_isn_t_correct_try_again">Password isn\'t correct. Try again.</string>
    <string name="please_enter_valid_email_id">Please enter valid email ID.</string>
    <string name="screen_name_is_required">Screen Name is required.</string>
    <string name="length_must_be_between_6_to_15_characters">Length must be between 6 to 15 characters!</string>
    <string name="password_and_confirm_password_does_not_match">Password and Confirm Password does not match.</string>
    <string name="current_password_field_is_required">Current Password Field is required</string>
    <string name="duress_password_field_is_required">Duress Password Field is required</string>
    <string name="new_password_field_is_required">New Password Field is required</string>
    <string name="ecc_id_field_is_required">ECC ID field is required.</string>
    <string name="screen_name_field_is_required">Screen Name field is required.</string>
    <string name="alias_field_is_required">Alias field is required.</string>
    <string name="add_contacts_first">Add contacts first</string>
    <string name="you_have_one_new_friend_request">You have one new friend request.</string>
    <string name="friend_request_accepted_by_s">Friend request accepted by %s.</string>
    <string name="password_must_be_of_6_digit_and_must_contain_at_least_one_digit_one_character">Password must be of 6 digit and must contain at least one digit, one Character</string>
    <string name="new_messages_s">New messages (%d)</string>
    <string name="please_enter_valid_ecc_id">Please enter valid ecc id</string>
    <string name="more">More</string>
    <string name="save_chat">Save Chat</string>
</resources>