<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_white"
        android:title="@string/copy"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_forever_white"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_to_vault"
        android:icon="@drawable/ic_save_white"
        android:title="@string/save_to_vault"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/img_forward"
        android:title="@string/forward"
        app:showAsAction="always" />

</menu>
