<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#111111">

    <LinearLayout
        android:id="@+id/lyr_account_password_child"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/quicksandbold"
            android:text="@string/title_simple"
            android:textColor="@color/button_text_color"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txt_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksandregular"
            android:text="Messageas dgkaskdghkash g;klas h;gkashg lk;as g;lkashg; laskhg lkasd glasdg sa;kl gasdg laskdg lasdg las g"
            android:textColor="@color/button_text_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/cancel" />


            <Button
                android:id="@+id/btn_delete"
                style="@style/save_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/delete" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>