<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/you_are_on_the_last_attemp_if_incorrect_your_data_will_be_security_wiped"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/lbl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ShadowSecureTypeIn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/last_attempt_check"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/verdana_regular"
            android:gravity="center"
            android:hint="Are you sure you want to try again?"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="13sp"
            android:visibility="visible" />
        <TextView
            android:id="@+id/last_attempt_check_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_gravity="right"
            android:layout_marginRight="15dp"
            android:visibility="invisible"
            android:text="Try again!"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/lyr_clear_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:layout_weight="0.2">
                <Switch
                    android:id="@+id/switch_clear_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="60dp"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_bg" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/quicksandregular"
                    android:text="@string/wipe_contacts"
                    android:textColor="@color/text_gray" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="0.2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="10dp"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textSize="14.5sp" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="0.2"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="14.5sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>